--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
         { "src": "/(.*)", "dest": "/public/index.php" }
     ],
     "public": true,
-    "buildCommand": "composer install && php artisan config:cache && php artisan route:cache && php artisan view:cache",
+    "buildCommand": "vite build",
     "outputDirectory": "public",
     "env": {
         "APP_ENV": "production",
