lagi lagi lagi lagi deploy vercel lagi lagi terakhir

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
     "version": 2,
+    "framework": null,
     "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.7.4"
-        }
+        "api/index.php": { "runtime": "vercel-php@0.7.4" }
     },
     "routes": [
-        { "src": "/build/(.*)", "dest": "/public/build/$1" },
+        { "src": "/build/(.*)", "dest": "/public/build/" },
         { "src": "/(.*)", "dest": "/public/index.php" }
     ],
     "public": true,
